Redid inf architecture of Home

--- a/CarouselApplication/Views/FindUddannelse.cshtml
+++ b/CarouselApplication/Views/FindUddannelse.cshtml
@@ -48,9 +48,9 @@
             </p>
 
             <div class="ExpandingButtons" id="ExpandingButtonsEsbjerg">
-                <a class="ghostButton" href="#">Ansatte</a>
+                <a class="ghostButton" target="_blank" href="http://efe.nu/kontakt-os/">Ansatte</a>
 
-                <a class="ghostButton" href="#">Hjemmeside</a>
+                <a class="ghostButton" target="_blank" href="http://efe.nu/">Hjemmeside</a>
             </div>
 
         </div>
@@ -117,11 +117,11 @@
             </p>
 
             <div class="ExpandingButtons">
-                <a class="ghostButton" href="#">Ansatte</a>
+                <a class="ghostButton" target="_blank" href="http://psvarde.dk/om-skolen/ansatte/">Ansatte</a>
 
                 <a class="ghostButton" href="#">Mere om faget</a>
 
-                <a class="ghostButton" href="#">Hjemmeside</a>
+                <a class="ghostButton" target="_blank" href="http://psvarde.dk/">Hjemmeside</a>
             </div>
 
         </div>
@@ -152,11 +152,11 @@
             </p>
 
             <div class="ExpandingButtons">
-                <a class="ghostButton" href="#">Ansatte</a>
+                <a class="ghostButton" traget="_blank" href="https://www.lustrupholm.dk/skolen/medarbejdere.aspx">Ansatte</a>
 
                 <a class="ghostButton" href="#">Mere om faget</a>
 
-                <a class="ghostButton" href="#">Hjemmeside</a>
+                <a class="ghostButton" target="_blank" href="https://www.lustrupholm.dk/forside.aspx">Hjemmeside</a>
             </div>
 
         </div>
@@ -188,11 +188,11 @@
                 </p>
 
                 <div class="ExpandingButtons">
-                    <a class="ghostButton" href="#">Ansatte</a>
+                    <a class="ghostButton" target="_blank" href="http://www.psvejen.dk/da/88376-Kontakt">Ansatte</a>
 
                     <a class="ghostButton" href="#">Mere om faget</a>
 
-                    <a class="ghostButton" href="#">Hjemmeside</a>
+                    <a class="ghostButton" target="_blank" href="http://www.psvejen.dk/">Hjemmeside</a>
                 </div>
 
         </div>
