--- a/CarouselApplication/Views/Home.cshtml
+++ b/CarouselApplication/Views/Home.cshtml
@@ -5,9 +5,9 @@
 }
 
 
-
-Wait what?
-
+<div class="findUddannelseTitle">
+    <h3>Velkommen til KUU SVJ</h3>
+</div>
 
 <div class="container-fluid" id="container1">
 
@@ -85,9 +85,16 @@ Wait what?
     </div>
 <!-- Carousel slider ends -->
 
-<div class="container-fluid" id="container2">
+<div class="container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 center" id="container2">
+    <div class="homeText1 col-sm-6 col-md-6 col-lg-6 col-xl-6 center">
         <h3>Nyheder</h3>
         <h5>@CurrentPage.nyheder</h5>
+    </div>
+
+    <div class="homeText2 col-sm-6 col-md-6 col-lg-6 col-xl-6 center">
+        <h3>Fakta om KUU</h3>
+        <h5>@CurrentPage.faktaOmKUU</h5>
+    </div>
 </div>
 
 
@@ -100,13 +107,8 @@ Wait what?
     </div>
 </div>
 
+
 <div class="container-fluid" id="container4">
-    <h3>Fakta om KUU</h3>
-    <h5>@CurrentPage.faktaOmKUU</h5>
-</div>
-
-
-<div class="container-fluid" id="container5">
     <img src="~/images/young.people.large.png" />
         <div>
             <h3>Vil du være Erhvervs Assistent, og have adgang til en alternativ vej til drømme uddannelsen/jobbet? <br />
