--- a/CarouselApplication/Views/Master.cshtml
+++ b/CarouselApplication/Views/Master.cshtml
@@ -24,7 +24,7 @@
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 
-        <link href="~/css/Style.css" rel="stylesheet" />
+        <link href="~/css/Style.css?=v3" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
 
