--- a/CarouselApplication/css/Style.css
+++ b/CarouselApplication/css/Style.css
@@ -361,60 +361,50 @@ h4 {
 }
 
 #container2 {
-    background-color: white;
-    padding: 20px 50px 20px 50px;
+    background-color: red;
+}
+
+
+#container2 div {
+    background-color: purple;
+    padding: 20px 0px 20px 0px;
     color: #1a3e16;
+    display: inline-block;
+    vertical-align: top;
 }
     #container2 p {
         color: #1a3e16;
     }
 
+
 #container3 {
-    padding: 0;
-    width: 100%;
-    height: 500px;
-    background-color: aliceblue;
-    overflow: hidden;
+    background-color: blue;
     position: relative;
     z-index: 0;
+    overflow: hidden;
+    height: 500px;
+    width: 100%;
 }
 
     #container3 img {
-        width: 100%;
-        position: absolute;
+        background-size: cover;
+        width: 103%;
+        z-index: 1;
     }
 
     #container3 div {
-        z-index: 2;
-        background: rgba(0, 0, 0, 0.7 );
-        position: absolute;
-        display: inline-block;
-        margin: 0;
-        padding: 20px 20px 20px 30px;
+        background-color: rgba(0, 0, 0, 0.77);
     }
 
     #container3 h5 {
-        z-index: 3;
-        color: white;
-        font-size: 30px;
+        
     }
 
     #container3 h3 {
-        z-index: 3;
-        color: white;
-        margin: 10px 0 0 0;
-        font-size: 30px;
+        
     }
 
 
-#container4 {
-    background-color: white;
-    overflow: hidden;
-    padding: 20px 50px 20px 50px;
-}
-    #container4 h5 {
-        color: #1a3e16;
-    }
 
 #container5 {
     padding: 0;
@@ -492,7 +482,7 @@ h4 {
     width: 100%;
     display: block;
     height: 150px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     position: relative;
     padding-top: 70px;
 }
@@ -519,7 +509,6 @@ h4 {
     width: 100%;
     height: 120px;
     overflow: hidden;
-    position: relative;
     z-index: 2;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
