Fixed the footer kinda
ye

--- a/CarouselApplication/Views/Home.cshtml
+++ b/CarouselApplication/Views/Home.cshtml
@@ -9,6 +9,20 @@
     <h3>Velkommen til KUU SVJ</h3>
 </div>
 
+
+<div class="container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 center" id="container2">
+    <div class="homeText1 col-sm-6 col-md-6 col-lg-6 col-xl-6 center">
+        <h3>Nyheder</h3>
+        <h5>@CurrentPage.nyheder</h5>
+    </div>
+
+    <div class="homeText2 col-sm-6 col-md-6 col-lg-6 col-xl-6 center">
+        <h3>Fakta om KUU</h3>
+        <h5>@CurrentPage.faktaOmKUU</h5>
+    </div>
+</div>
+
+<!-- Carousel slider starts -->
 <div class="container-fluid" id="container1">
 
     <div id="carouselOuter" class="container col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 col-xl-10 col-xl-offset-1 center">
@@ -85,20 +99,21 @@
     </div>
 <!-- Carousel slider ends -->
 
-<div class="container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 center" id="container2">
-    <div class="homeText1 col-sm-6 col-md-6 col-lg-6 col-xl-6 center">
-        <h3>Nyheder</h3>
-        <h5>@CurrentPage.nyheder</h5>
-    </div>
 
-    <div class="homeText2 col-sm-6 col-md-6 col-lg-6 col-xl-6 center">
-        <h3>Fakta om KUU</h3>
-        <h5>@CurrentPage.faktaOmKUU</h5>
+
+<div class="container-fluid" id="container4">
+    <div>
+        <h2>
+            KUU – Kombineret ungdomsuddannelse
+        </h2>
+        <h3>
+            @CurrentPage.nedersteTekst
+        </h3>
     </div>
 </div>
 
 
-<div class="container-fluid" id="container3">
+<div class="container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 center" id="container3">
     <img src="~/images/M-Final_TTYSU1461.jpg" />
     <div>
         <h3>Før du starter din uddannelse.</h3>
@@ -108,15 +123,3 @@
 </div>
 
 
-<div class="container-fluid" id="container4">
-    <img src="~/images/young.people.large.png" />
-        <div>
-            <h3>Vil du være Erhvervs Assistent, og have adgang til en alternativ vej til drømme uddannelsen/jobbet? <br />
-            På KUU kan du med udgangspunkt i håndfaste værktøjer, blive uddannet Erhvervs Assistent inden for dit ønskede område. <br />
-            Uddannelsen kombinerer teori og praksis.</h3>
-            <h5>KUU bliver udbudt af 4 uddannelses centre i Esbjerg, Ribe, Varde og Vejen. Tilsammen tilbyder vi en række spændende erhvervstemaer.<br />
-            Uddannelsen varer 2 år, opdelt i 4 dele. Hele forløbet er SU berettiget! <br />
-            Du vælger selv sammen med din UU-vejleder det erhvervstema som passer bedst på dine mål og drømme.</h5>
-
-        </div>
-</div>
