--- a/CarouselApplication/Views/PraktiskInfo.cshtml
+++ b/CarouselApplication/Views/PraktiskInfo.cshtml
@@ -9,20 +9,33 @@
 </div>
 
 
-<div class="PraktiskInfoContainer1">
+<div class="praktiskInfoContainer1 container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 center"> <!-- class="praktiskInfoContainer1 container col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 col-xl-10 col-xl-offset-1 center"> -->
+    <img src="@CurrentPage.sUImage" />
 
-</div>
-
-<div class="PraktiskInfoContainer2">
-
-</div>
-
-
-<div class="PraktiskInfoContainer3">
-
+    <div class="praktiskInfoExpanding">
+        <a class="ghostButton" href="#">Esbjerg</a>
+    </div>
 </div>
 
 
-<div class="PraktiskInfoContainer4">
 
+<div class="praktiskInfoContainer2 container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 center">
+    <div class="praktiskInfoExpanding">
+        <img src="@CurrentPage.centerImage1" />
+        <a class="ghostButton" href="#">Esbjerg</a>
+    </div>
+
+    <div class="praktiskInfoExpanding">
+        <img src="@CurrentPage.centerImage2" />
+        <a class="ghostButton" href="#">Varde</a>
+    </div>
+
+    <div class="praktiskInfoExpanding">
+        <img src="@CurrentPage.centerImage3" />
+        <a class="ghostButton" href="#">Vejen</a>
+    </div>
+</div>
+
+<div class="findVejleder">
+    <h4>Kender du ikke din vejleder?   <a class="ghostButton" href="#">Find Vejleder</a></h4>
 </div>
