--- a/CarouselApplication/css/Style.css
+++ b/CarouselApplication/css/Style.css
@@ -45,7 +45,7 @@ body {
 
 nav.colapse-nav {
     background-color: white;
-    /*display: block;*/
+    display: none;
     position: absolute;
     right: -45%;
     top: 88px;
@@ -222,10 +222,10 @@ nav.colapse-nav .dropbtn {
         display: block;
         float: none;
     }
-    #drop-menu li {
-        background: #666;
-        color: rgba(255,255,255,0.7)
-    }
+#drop-menu li {
+    background: #666;
+    color: rgba(255,255,255,0.7)
+}
     #drop-menu li:last-child {
         border-radius: 0px 0px 5px 5px;
     }
@@ -361,34 +361,38 @@ h4 {
 }
 
 #container2 {
-    background-color: red;
+    
 }
 
 
 #container2 div {
-    background-color: purple;
     padding: 20px 0px 20px 0px;
     color: #1a3e16;
     display: inline-block;
     vertical-align: top;
 }
-    #container2 p {
+    #container2 h5, #container2 h3 {
+        color: #0e0e0e;
+        margin-bottom: 20px;
+    }
+    #container2 li, #container2 p {
+        font-size: 16px;
         color: #1a3e16;
     }
 
 
 #container3 {
-    background-color: blue;
     position: relative;
     z-index: 0;
     overflow: hidden;
     height: 500px;
     width: 100%;
+    color: white;
 }
 
     #container3 img {
         background-size: cover;
-        width: 103%;
+        width: 100%;
         z-index: 1;
     }
 
@@ -396,11 +400,13 @@ h4 {
         background-color: rgba(0, 0, 0, 0.77);
     }
 
-    #container3 h5 {
-        
-    }
-
-    #container3 h3 {
+#container4 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: inline-block;
+}
+    #container4 h3, #container4 h3 {
+        color: #1a3e16;
         
     }
 
@@ -482,7 +488,7 @@ h4 {
     width: 100%;
     display: block;
     height: 150px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     position: relative;
     padding-top: 70px;
 }
@@ -710,12 +716,90 @@ h4 {
             height: 200px;
         }
 
-
 /* Fag Mål og Formål ends */
 
 
 
-/*.staffContainer {
+/* Praktisk Info starts */
+
+.praktiskInfoContainer1 {
+    height: 300px;
+    overflow: hidden;
+    margin-top: 10px;
+    position: relative;
+    display: block;
+    width: 100%;
+}
+.praktiskInfoContainer1 img {
+    position: absolute;
+    max-height: 1000px;
+    width: 100%;
+}
+
+
+.praktiskInfoContainer2 {
+    overflow: visible;
+    margin-top: 40px;
+}
+    .praktiskInfoExpanding {
+    height: 100px;
+    padding: 0 5px;
+    overflow: hidden;
+    width: 33%;
+    display: inline-block;
+    position: relative;
+}
+    .praktiskInfoExpanding img {
+        max-height: 500px;
+        width: 100%;
+        
+    }
+    .praktiskInfoExpanding a {
+        background-color: rgba(0,0,0,0.7);
+        position: absolute;
+        display: block;
+        top: 20px;
+        right: 20px;
+        bottom: 20px;
+        left: 20px;
+    }
+    
+.findVejleder {
+    display: inline-block;
+}
+    .findVejleder h4 {
+        color: #333;
+    }
+
+
+.footer {
+    background-color: none;
+    border-top: 2px solid #16700b;
+    height: 200px;
+    margin-top: 40px;
+    display: inline-block;
+}
+    .footer .footerInner {
+        background-color: none;
+        min-height: 30%;
+        width: 80%;
+        margin: 20px auto;
+    }
+    .footerInner .footerImageContainer {
+        width: 25%;
+        overflow: hidden;
+        float: left;
+        height: 70px;
+        position: relative;
+    }
+    .footerImageContainer #FooterLogo {
+        max-width: 100%;
+        max-height: 100%;
+        display: block;
+        margin: 0 auto;
+    }
+    /* Praktisk Info ends */
+    /*.staffContainer {
     background-color: black;
     z-index: 4;
     position: absolute;
@@ -745,10 +829,10 @@ h4 {
     margin: 1px;
     color: white;
 }*/
-/*-----  Find Uddannelse page ends  -----*/
-/* General media-queries */
-@media screen and (min-width: 1050px) {
-    #container3 div {
+    /*-----  Find Uddannelse page ends  -----*/
+    /* General media-queries */
+    @media screen and (min-width: 1050px) {
+        #container3 div {
             position: absolute;
             top: 30%;
             bottom: 30%;
